--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.PlaylistMakerSearch"
-    tools:context=".media.ui.media.FavoritesFragment">
+    tools:context=".media.ui.FavoritesFragment">
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_empty"
