--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.PlaylistMakerMedia"
-    tools:context=".media.ui.media.PlaylistFragment">
+    tools:context=".media.ui.PlaylistFragment">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/create_playlist_button"
