--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
 
     <color name="yp_white">#FFFFFF</color>
     <color name="search_bar_night">#FFFFFF</color>
+    <color name="light_grayish_silver">#E6E8EB</color>
+    <color name="light_silver">#AEAFB4</color>
+    <color name="semi_blue">#9FBBF3</color>
+    <color name="blue">#3772E7</color>
 
 
 
