--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_26">26dp</dimen>
     <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_45">45dp</dimen>
     <dimen name="dp_46">46dp</dimen>
