--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,5 +19,15 @@
         android:id="@+id/mediaFragment"
         android:name="com.practicum.playlistmaker.media.ui.MediaFragment"
         android:label="fragment_media"
-        tools:layout="@layout/fragment_media" />
+        tools:layout="@layout/fragment_media">
+        <action
+            android:id="@+id/action_mediaFragment_to_newPlaylist"
+            app:destination="@id/newPlaylist" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/newPlaylist"
+        android:name="com.practicum.playlistmaker.media.ui.NewPlaylistFragment"
+        android:label="fragment_newplaylist"
+        tools:layout="@layout/fragment_newplaylist" />
 </navigation>
