--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -30,7 +30,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="?attr/colorOnPrimary"
-            tools:text="[Playlist name]" />
+            tools:text="Playlist name" />
 
 
 
@@ -42,7 +42,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="?attr/colorOnPrimary"
-            tools:text="[157 треков]" />
+            tools:text="157 треков" />
 
     </LinearLayout>
 
