--- a/app/src/main/res/layout/fragment_newplaylist.xml
+++ b/app/src/main/res/layout/fragment_newplaylist.xml
@@ -23,19 +23,21 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/dp_24"
-        android:layout_marginTop="@dimen/dp_26"
+        android:layout_marginTop="@dimen/dp_16"
         android:adjustViewBounds="true"
         android:background="@drawable/playlist_cover"
         android:contentDescription="@string/create_playlist"
-        android:maxHeight="312dp"
         android:scaleType="centerInside"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:srcCompat="@drawable/ic_new_playlist"
-        tools:layout_editor_absoluteX="24dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/playlist_name_box"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_new_playlist" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_16dp_start"
@@ -56,7 +58,7 @@
         style="@style/new_playlist_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_16"
         android:hint="@string/playlist_name"
         app:cursorColor="@color/semi_blue"
         app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
@@ -76,6 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginBottom="@dimen/dp_16"
         android:hint="@string/playlist_description"
         app:cursorColor="@color/semi_blue"
         app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
@@ -89,11 +92,11 @@
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_create"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_16"
         android:layout_marginBottom="@dimen/dp_32"
         android:backgroundTint="@drawable/button_add_playlist"
         android:fontFamily="@font/ys_display_medium"
@@ -104,9 +107,8 @@
         android:textFontWeight="500"
         android:textSize="@dimen/text_16"
         app:cornerRadius="@dimen/dp_8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guideline_16dp_end"
-        app:layout_constraintStart_toEndOf="@id/guideline_16dp_start" />
-
+        app:layout_constraintEnd_toEndOf="@id/guideline_16dp_end"
+        app:layout_constraintStart_toStartOf="@id/guideline_16dp_start"
+        app:layout_constraintTop_toBottomOf="@id/playlist_description_box" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
