--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,26 +81,21 @@
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 
-    <style name="TrackPlayerActivityLeftText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center</item>
-        <item name="android:textSize">@dimen/text_14</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/ys_display_regular</item>
-        <item name="android:textColor">@color/yp_text_gray</item>
-        <item name="android:layout_marginBottom">@dimen/dp_16</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:singleLine">true</item>
+    <style name="PlayerTextLeft" parent="Widget.MaterialComponents.TextView">
+        <item name="fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_13</item>
     </style>
 
-    <style name="TrackPlayerActivityRightText" parent="TrackPlayerActivityLeftText">
-        <item name="android:layout_width">0dp</item>
+    <style name="PlayerTextRight" parent="Widget.MaterialComponents.TextView">
+        <item name="fontFamily">@font/ys_display_regular</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
-        <item name="android:gravity">end</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">@dimen/text_13</item>
     </style>
+
+
 
     <!--Все стили для истории поиска-->
 
