--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,11 +23,22 @@
         <action
             android:id="@+id/action_mediaFragment_to_newPlaylist"
             app:destination="@id/newPlaylist" />
+        <action
+            android:id="@+id/action_mediaFragment_to_playlistViewer"
+            app:destination="@id/playlistViewer" />
     </fragment>
-
     <fragment
         android:id="@+id/newPlaylist"
         android:name="com.practicum.playlistmaker.media.ui.NewPlaylistFragment"
         android:label="fragment_newplaylist"
         tools:layout="@layout/fragment_newplaylist" />
+    <fragment
+        android:id="@+id/playlistViewer"
+        android:name="com.practicum.playlistmaker.media.ui.PlaylistViewerFragment"
+        android:label="fragment_playlist_viewer"
+        tools:layout="@layout/fragment_playlist_viewer">
+        <action
+            android:id="@+id/action_playlistViewer_to_newPlaylist"
+            app:destination="@id/newPlaylist" />
+    </fragment>
 </navigation>
