--- a/app/src/main/res/layout/fragment_playlist_viewer.xml
+++ b/app/src/main/res/layout/fragment_playlist_viewer.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/light_grayish_silver"
     android:orientation="vertical"
-    android:theme="@style/Theme.PlaylistMakerMedia"
+    android:theme="@style/Theme.PlaylistMakerPlayer"
     tools:context=".media.ui.PlaylistViewerFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -61,7 +61,7 @@
 
         <TextView
             android:id="@+id/playlist_description"
-           android:layout_width="wrap_content"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_8"
             android:fontFamily="@font/ys_display_regular"
@@ -229,7 +229,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:textColor="?attr/colorSecondaryVariant"
+                    android:textColor="?attr/colorOnPrimary"
                     android:textSize="@dimen/text_11"
                     tools:text="157 треков" />
 
