--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
+        app:layout_anchor="@+id/player_content"
+        app:layout_anchorGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,20 +70,20 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_24"
             android:fontFamily="@font/ys_display_medium"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="?attr/colorOnPrimary"
             android:textFontWeight="400"
             android:textSize="@dimen/text_22"
             app:layout_constraintStart_toStartOf="@id/leftBorder"
             app:layout_constraintTop_toBottomOf="@id/album_cover"
             tools:text="Yesterday (Remastered 2009)" />
-
+<!-- ?attr/colorOnSecondary -->
         <TextView
             android:id="@+id/artist_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_12"
             android:fontFamily="@font/ys_display_medium"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="?attr/colorOnPrimary"
             android:textFontWeight="400"
             android:textSize="@dimen/text_14"
             app:layout_constraintStart_toStartOf="@id/title"
@@ -129,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_12"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="?attr/colorOnPrimary"
             android:textFontWeight="500"
             android:textSize="@dimen/text_14"
             app:layout_constraintEnd_toStartOf="@id/rightBorder"
