--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,7 +83,7 @@
 
     <style name="PlayerTextLeft" parent="Widget.MaterialComponents.TextView">
         <item name="fontFamily">@font/ys_display_regular</item>
-        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">@dimen/text_13</item>
     </style>
